docs/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cqar
  labels:
    name: cqar
    environment: production
